--- a/frontend-react/.env
+++ b/frontend-react/.env
@@ -1,2 +1,2 @@
-VITE_API_URL=http://localhost:5501
-#VITE_API_URL=https://api-coachfutbol.onrender.com
+#VITE_API_URL=http://localhost:5501
+VITE_API_URL=https://api-coachfutbol.onrender.com
