--- a/frontend-react/package.json
+++ b/frontend-react/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/styled-components": "^5.1.36",
     "@types/three": "^0.181.0",
+    "jspdf": "^4.0.0",
     "jwt-decode": "^4.0.0",
     "leader-line-new": "^1.1.9",
     "react": "^19.2.0",
